[workspace]
members = [
  "tanu",
  "tanu-core",
  "tanu-derive",
  "tanu-tui",
  "tanu-integration-tests",
  "examples",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
eyre = { version = "0.6", features = ["track-caller"] }
dotenv = "0.15"
futures = "0.3"
http = "1"
inventory = "0.3"
itertools = "0.13"
log = "0.4"
memoize = "0.5"
once_cell = "1"
pretty_assertions = "1"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
test-case = "3"
url = "2"
