[project]
name = "tanu"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yukinarit", email = "yukinarit84@gmail.com" }
]
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocstrings>=0.24.0",
    "mkdocs-macros-plugin>=1.0.0",
    "mike>=2.1.3",
    "pymdown-extensions>=10.16.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tanu"]
