[package]
name = "tanu-core"
version = "0.13.0"
edition = "2021"
description = "The core component of tanu-rs"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
backon = "1.4"
chrono = "0.4"
console = { version = "0.15" }
cookie = { version = "0.18", optional = true }
dotenv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
humantime-serde = "1"
indexmap = "2"
itertools = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-tls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"
serde_urlencoded = "0.7"
flate2 = "1.1"
brotli = "8.0"
zstd = "0.13"
serde = { workspace = true }
serde_json = "1"
strum = { workspace = true }
tabled = "0.18"
tanu-derive = { version = "=0.13.0", path = "../tanu-derive" }
thiserror = "2"
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"

[dev-dependencies]
mockito = "1.7"
test-case = { workspace = true }

[features]
default = []
json = []
multipart = []
cookies = ["cookie"]
