[package]
name = "tanu-core"
version = "0.20.2"
edition = "2021"
description = "The core component of tanu-rs"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
backon = "1.4"
chrono = "0.4"
console = { version = "0.15" }
cookie = { version = "0.18", optional = true }
dotenv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
humantime-serde = "1"
indexmap = "2"
itertools = { workspace = true }
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-tls = { workspace = true, optional = true }

# rustls support (optional)
hyper-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"
serde_urlencoded = "0.7"
flate2 = "1.1"
brotli = "8.0"
zstd = "0.13"
serde = { workspace = true }
serde_json = "1"
strum = { workspace = true }
tabled = "0.18"
tanu-derive = { version = "=0.20.2", path = "../tanu-derive" }
thiserror = "2"
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"

# gRPC support (optional)
tonic = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
urlencoding = { version = "2", optional = true }

# GraphQL support (optional)
graphql_client = { version = "0.16", optional = true }

[dev-dependencies]
mockito = "1.7"
serial_test = "3"
test-case = { workspace = true }

[features]
default = ["native-tls"]
native-tls = ["hyper-tls"]
rustls-tls = ["hyper-rustls", "rustls"]
rustls-tls-webpki-roots = ["rustls-tls", "webpki-roots"]
rustls-tls-native-roots = ["rustls-tls", "rustls-native-certs"]
json = []
multipart = []
cookies = ["cookie"]
grpc = ["tonic", "tower", "urlencoding"]
graphql = ["json", "graphql_client"]
