[package]
name = "tanu-derive"
version = "0.3.1"
edition = "2021"
description = "Offering #[tanu::test] and #[tanu::main] macros"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
eyre = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
walkdir = "2.5"

[dev-dependencies]
test-case = { workspace = true }

[lib]
proc-macro = true
