[package]
name = "tanu-integration-tests"
version = "0.9.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
base64 = "0.21"
dtor = "0.0.6"
serde = { workspace = true }
serde_json = "1"
tanu = { path = "../tanu", features = ["json", "cookies"] }
testcontainers = "0.24"
tokio = { workspace = true }
url = { version = "2", features = ["serde"] }
