[package]
name = "tanu-integration-tests"
version = "0.10.0"
edition = "2021"
default-run = "tanu-integration-tests"
build = "build.rs"

[[bin]]
name = "second-runner"
path = "src/bin/second_runner/main.rs"

[[bin]]
name = "third-runner"
path = "src/bin/third_runner.rs"

[dependencies]
anyhow = { workspace = true }
base64 = "0.21"
dtor = "0.0.6"
prost = "0.14.1"
serde = { workspace = true }
serde_json = "1"
tanu = { path = "../tanu", features = ["json", "cookies"] }
testcontainers = "0.24"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
url = { version = "2", features = ["serde"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14.2"
