[package]
name = "tanu-integration-tests"
version = "0.20.0"
edition = "2021"
default-run = "tanu-integration-tests"
build = "build.rs"

[[bin]]
name = "second-runner"
path = "src/bin/second_runner/main.rs"

[[bin]]
name = "third-runner"
path = "src/bin/third_runner.rs"

[features]
default = ["native-tls"]
native-tls = ["tanu/native-tls"]
rustls-tls = ["tanu/rustls-tls"]
rustls-tls-webpki-roots = ["tanu/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["tanu/rustls-tls-native-roots"]
fail-test = []

[dependencies]
anyhow = { workspace = true }
base64 = "0.21"
graphql_client = "0.16"
dtor = "0.0.6"
prost = "0.14.1"
serde = { workspace = true }
serde_json = "1"
tanu = { path = "../tanu", default-features = false, features = ["json", "cookies", "grpc", "graphql"] }
testcontainers = "0.24"
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
url = { version = "2", features = ["serde"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14.2"
