[package]
name = "tanu-tui"
version = "0.2.0"
edition = "2021"
description = "TUI frontend for tanu"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
ansi-to-tui = "6"
async-trait = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
dotenv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
ratatui = "0.28"
reqwest = { workspace = true }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
syntect = "5"
tanu-core = { version = "=0.2.0", path = "../tanu-core" }
textwrap = "0.16"
tokio = { workspace = true }
tui-big-text = "0.6.0"
tui-logger = { version = "0.13", features = ["tracing-support"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
