[package]
name = "tanu-tui"
version = "0.3.2"
edition = "2021"
description = "TUI frontend for tanu"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
ansi-to-tui = "7"
async-trait = { workspace = true }
crossterm = { version = "0.28", features = ["event-stream"] }
dotenv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
memoize = { workspace = true }
once_cell = { workspace = true }
ratatui = "0.29"
reqwest = { workspace = true }
serde_json = "1"
strum = { workspace = true }
syntect = "5"
tanu-core = { version = "=0.3.2", path = "../tanu-core" }
textwrap = "0.16"
tokio = { workspace = true }
tui-big-text = "0.7"
tui-logger = { version = "0.14", features = ["tracing-support"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
