[package]
name = "tanu-tui"
version = "0.13.0"
edition = "2021"
description = "TUI frontend for tanu"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
ansi-to-tui = "8"
async-trait = { workspace = true }
chrono = "0.4"
crossterm = { version = "0.29", features = ["event-stream"] }
dotenv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
memoize = { workspace = true }
once_cell = { workspace = true }
ratatui = "0.30"
serde_json = "1"
strum = { workspace = true }
syntect = "5"
tanu-core = { version = "=0.13.0", path = "../tanu-core" }
textwrap = "0.16"
throbber-widgets-tui = "0.10"
tokio = { workspace = true }
tui-big-text = "0.8"
tui-logger = { version = "0.18", features = ["tracing-support"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
eyre = { workspace = true }
