[package]
name = "tanu"
version = "0.4.2"
edition = "2021"
description = "tanu - High-performance and async-friendly WebAPI testing framework for Rust"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
console = { version = "0.15" }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num_cpus = "1"
once_cell = { workspace = true }
pretty_assertions = "1"
reqwest = { version = "0.12", optional = true }
serde = { workspace = true }
tanu-core = { version = "=0.4.2", path = "../tanu-core" }
tanu-derive = { version = "=0.4.2", path = "../tanu-derive" }
tanu-tui = { version = "=0.4.2", path = "../tanu-tui" }
thiserror = "1"
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
json = ["reqwest/json", "tanu-core/json"]
multipart = ["reqwest/multipart", "tanu-core/multipart"]
