[package]
name = "tanu"
version = "0.20.2"
edition = "2021"
description = "tanu - High-performance and async-friendly WebAPI testing framework for Rust"
readme = "README.md"
homepage = "https://github.com/tanu-rs/tanu"
repository = "https://github.com/tanu-rs/tanu"
license = "Apache-2.0"
keywords = ["webapi", "test", "http"]
categories = ["development-tools"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
console = { version = "0.15" }
eyre = { workspace = true }
futures = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num_cpus = "1"
once_cell = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = "1"
strum = { workspace = true }
tanu-core = { version = "=0.20.2", path = "../tanu-core", default-features = false }
tanu-derive = { version = "=0.20.2", path = "../tanu-derive" }
tanu-tui = { version = "=0.20.2", path = "../tanu-tui", default-features = false }
thiserror = "1"
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["native-tls"]
native-tls = ["tanu-core/native-tls", "tanu-tui/native-tls"]
rustls-tls = ["tanu-core/rustls-tls", "tanu-tui/rustls-tls"]
rustls-tls-webpki-roots = ["tanu-core/rustls-tls-webpki-roots", "tanu-tui/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["tanu-core/rustls-tls-native-roots", "tanu-tui/rustls-tls-native-roots"]
json = ["tanu-core/json"]
multipart = ["tanu-core/multipart"]
cookies = ["tanu-core/cookies"]
grpc = ["tanu-core/grpc", "tanu-tui/grpc"]
graphql = ["tanu-core/graphql"]
